Week-04/css/styles.css
:root{
    --title: normal 700 1.875rem/2.1875rem Roboto;
    --aside-button: normal 876 1.25rem/1.438rem Roboto;
    --li-activities: normal 700 0.875rem/1rem Roboto;
    --subheader: normal 400 1.25rem/1.44rem Roboto;
    --component-title: normal 700 0.875rem/1rem Roboto;
    --h3: normal 876 1.5rem/1.76rem Roboto;
    --p-1: normal 400 0.75rem/1.125rem Roboto;
    --p-2: normal 400 0.94rem/1.5rem Roboto;
    --button: normal 500 0.75rem/0.875rem Roboto;
    --label: normal 500 0.875rem/1rem Roboto;
    --placeholder: normal 400 0.875rem/1rem Roboto;
    --table: normal 600 0.75rem/0.75rem Roboto;
    --footer: normal 600 0.875rem/0.875rem Roboto;
}

.main-container{
    display: flex;
    height: 100vh;
    overflow: hidden;
}

header{
    position: fixed;
    width: 100%;
    height: 73px;
    background-color: #373867;
    z-index: 1;
    line-height: 73px;
}

aside{
    display: none;
    height: 100%;
    width: 25%;
    min-width: 300px;
    margin-top: 73px;
    background-color: #AACE9B;
}

main{
    width: 85%;
    height: 100vh;
    margin-top: 0;
    margin: auto;
    max-width: 900px;
    padding: 2%;
    text-align: center;
    overflow-y: auto;
}

section{
    margin-top: 5%;
}

section h2{
    margin-bottom: 4%;
}
main *{
    max-width: 100%;
}

nav img{
    padding-right: 10px;
}

.button-nav{
    display: block;
    width: 263px;
    height: 37.69px;
    margin: auto;
    margin-top: 15px;
    text-align: left;
    border: 1.5px solid #373867;
    border-radius: 5px;
    font: var(--aside-button);
    line-height: 37.69px;    
    background-color: white;
}

.button-nav a{
    margin-left: 80px;
    color: #373867;
}

.contact-info{
    margin-top: 100%;
}

.contact-info h3{
    position: relative;
    margin-bottom: 40px;
    font: var(--aside-button);
    letter-spacing: 0em;
    text-align: center;
    text-decoration: underline;
    color: white
}

.contact-info li{
    margin-left: 10px;
    font: var(--subheader);
    letter-spacing: 0em;
    color: #373867;
    text-decoration: none;
}

.contact-info ul img{
    width: 15px;
    height: 15px;
}

#icon-phone{
    width: 20px;
    height: 20px;    
    transform:perspective(-45);
}

.contact-info ul li{
    margin-top: 20px;
}

h1{
    font: var(--title);
    color: #373867;
}

h2{
    flex: 100%;
    color: #373867;
    font: var(--title);
    text-align: center;
    text-decoration: underline #49A37B 3px;
    text-underline-offset: 8px;
}

h3{
    font: var(--h3);
    color: #373867;
}

p{
    font: var(--p-1);
    color:#373867;
}

form{
    display: flex;
    flex-wrap: wrap;
    padding: 4%;
    text-align: left;
    color: #373867;
}
.intouch-column-1 *, .intouch-column-2 * {
    width: 100%;
}

.about-p{
    display: none;
}

label{
    margin-bottom: 10px;
    font: var(--label);
}

input, select, textarea{
    box-sizing:border-box;
    height: 37px;
    margin-bottom: 25px;    
    border: 1px solid #373867;
    border-radius: 4px;
    font: var(--placeholder);
}

textarea{    
    flex: 1;
    height: 150px;
}

#message::placeholder{
    padding-left: 10px;
    padding-top: 10px;
    color: #373867;
    opacity: 0.5;
}

input::placeholder{
    padding-left: 10px;
    color: #373867;
    opacity: 0.5;
}

.submit{
    margin-bottom: 0px;
    width: 123px;
    height: 47px;
    font: var(--button);
    border-radius: 5px;
    border: none;
    background: #AACE9B;
    color: #373867;
}

.submit-1{
    display: none;
}

#logo{
    width: 194px;
    height: 41px;
    margin-left: 29px;    
    vertical-align: middle;
}

#section-welcome{
    margin-top: 100px;
    display: flex;
    flex-wrap: wrap;
    text-align: center;
    justify-content: center;
}

#section-welcome p{
    margin-top: 2%;
    margin-bottom: 2%;
    font: var(--subheader);
}

.welcome-column-1{
    max-width: 480px;
    align-self: center;
}


#section-features{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    text-align: left;
}

#section-features article{
    font: var(--p-1);
}

#section-features h3{
    margin-top: 2%;
    margin-bottom: 2%;
    margin-left: 5%;
    font: var(--component-title);
}

#section-about{
    display: flex;
    flex-wrap: wrap;
}

#section-about p{
    margin: 3%;
    font: var(--p-2);
}

.about-row-1, .about-row-2{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
}

.learn-more{
    margin-bottom: 2%;
    width: 88px;
    height: 32px;
    border: 1px solid #373867;
    border-radius: 5px;
    font: var(--button);
    background: #FFFFFF;
    color: #373867;
}

.list-activities{
    display: flex;
    justify-content: center;
    margin-bottom: 2%;
    font: var(--li-activities);
    list-style: none;
    color: #373867;
}

.list-activities li{
    margin: 15%;
}

.activities-column{
    display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.activities-center{
    align-self: center;
}

#section-activities{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

#welcome{
    font: var(--subheader);
    color: #49A37B;
    text-decoration: none;
}

#section-features img{
    width: 27.7px;
}

table{
    margin-bottom: 10%;
    width: 100%;
    align-items: center;
    font: var(--table);
    line-height: 100%;
    color: #373867;
    border-collapse: collapse;
}

td, th{
    padding: 16px;
}

tr:nth-child(odd) {
    background-color: #f2f2f2;
}

th{
    background-color: #f2f2f2;
}

footer{
    width: 100%;
    height: 72px;
    text-align: center;
    font: var(--footer);
    background-color:#AACE9B;
}

footer ul li{
    display: inline-block;
    padding-left: 10px;
    margin-top: 10px;
}

footer p{
    color: white;
}

@media (min-width: 601px) {
    :root{
        --title: normal 700 2.5rem/2.94rem Roboto;
        --aside-button: normal 876 1.25rem/1.438rem Roboto;
        --li-activities: normal 876 1.5rem/1.76rem Roboto;
        --subheader: normal 400 1.25rem/1.44rem Roboto;
        --component-title: normal 700 0.875rem/1rem Roboto;
        --h3: normal 876 1.5rem/1.76rem Roboto;
        --p-1: normal 400 0.75rem/1.125rem Roboto;
        --p-2: normal 400 0.75rem/1.125rem Roboto;
        --button: normal 500 1rem/1.172rem Roboto;
        --label: normal 500 0.875rem/1rem Roboto;
        --placeholder: normal 400 0.875rem/1rem Roboto;
        --table: normal 700 0.875rem/1.026rem Roboto;
        --footer: normal 600 0.875rem/0.875rem Roboto;
    }

    main{
        width: 100%;
    }

    .welcome-column-2, .welcome-column-1{
        flex: 50%;
    }

    .welcome-column-2 img{
        max-width: 100%;
    }

    .features-column-1, .features-column-2{
        flex: 50%;
    }

    #section-features article{
        margin: 5%;
    }

    .about-row-1, .about-row-2{
        flex-wrap: nowrap;
        flex: 100%
    }

    #section-about p, #section-about img{
        width: 50%;
    }

    .about-row-1 p{
        text-align: right;
    }
    
    .about-row-2 p{
        text-align: left;
    }
    
    .about-row-2 img{
        order: 2;
    }

    .learn-more{
        display: none;
    }

    .about-p{
        display: block;
    }

    .about-p-mobile{
        display: none;
    }

    .intouch-column-1, .intouch-column-2{
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
    }
    .submit-2{
        display: none;
    }
    .submit-1{
        display: block;
    }
    form{
        padding: 0%;
    }
    .intouch-column-1{
        flex: 20%;
        padding: 2%;
        padding-bottom: 0;
    }
    .intouch-column-2{
        flex: 30%;
        padding: 2%;
        padding-bottom: 0;
    }

    textarea{        
    margin-bottom: 0;
    }

    #section-activities img{
        width: 50%;
    }

    .list-activities{
        display: block;
        list-style:disc;
    }

    .list-activities li{
        margin: 2%;
    }
}

@media (min-width: 1025px){ 
    aside{
        display: block;
    }

    .welcome-column-2 img{
        min-width: 300px;
        max-width: 100%;
    }

    .about-p{
        display: block;
    }

    .about-p-mobile{
        display: none;
    }

    
}

